Adjusted spacing and sizing issues when flowing to larger screens.

--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ body {
 }
 
 .intro h2 {
-	font-weight: normal;
+	font-weight: 400;
 	font-size: 2rem;
 	color: white;
 	margin-bottom: 0.5em
@@ -82,28 +82,15 @@ body {
 
 .nav {
 	list-style: none;
-	margin: 1em;
+	margin-top: 1em;
 	padding: 0;
+	text-align: center;
 }
 
 .nav li {
-	width: 33.333%;
-}
-
-.left, .right, .center {
+	width: 30%;
 	display: inline-block;
-}
-
-.left {
-	float: left;
-}
-
-.right {
-	float: right;
-}
-
-.center {
-	clear: both;
+	padding: 0;
 }
 
 .st0{fill:#333333;} .st1{fill:#FFFFFF;}
@@ -118,10 +105,11 @@ body {
 
 .mystory {
 	padding: 2em 1em 3em 1em;
+	margin: 0;
 }
 
 .mystory h2 {
-	font-weight: normal;
+	font-weight: 400;
 	font-size: 2rem;
 	text-align: center;
 	margin-top: 0;
@@ -161,21 +149,30 @@ footer em {
 			padding-top: 4em;
 		}
 
-		.nav {
-			margin: 0.5em;
+		.mystory h2 {
+			text-align: left;
 		}
 
-		.nav li {
-			padding: 0.5em;
+		footer {
+			text-align: left;
 		}
+
 }
 
-@media only screen and (min-width: 27em) {
+@media only screen and (min-width: 23em) {
 
 		html {
 			font-size: 110%;
 			line-height: 1.4;
 		}
+
+		.dp {
+			width: 55%;
+		}
+
+}
+
+@media only screen and (min-width: 33em) {
 
 		.masthead {
 			padding: 6em 0 8em 0;
@@ -191,50 +188,37 @@ footer em {
 			width: 50%;
 			float: left;
 			margin-top: -8em;
-			margin-left: 1em;
+			margin-left: 2em;
 		}
 
 		.intro {
 			text-align: right;
 			padding-right: 3em;
 			padding-top: 1em;
-			z-index: 1;
-		}
-
-		.intro h2 {
-			font-size: 1.5rem;
-		}
-
-		.nav li {
-			width: 16.5%;
-			text-align: center;
-			padding-bottom: 0;
 		}
 
 		.nav {
-			margin: 1em 2em 0 2em;
+			margin: 1em 2.5em 0 2.5em;
+		}
+
+		.nav li {
+			width: 16%;
 		}
 
 		.mystory {
 			padding: 3em 3em 3em 3em;
-			margin: 0;
 		}
 
 		.mystory h2 {
 			text-align: left;
-			margin-top: 0;
 		}
 
 		footer {
-			text-align: left;
 			padding: 2em 3em 3em 3em;
 		}
 
-		footer p {
-			font-weight: 300;
-		}
-
 }
+
 
 @media only screen and (min-width: 45em) {
 
@@ -252,25 +236,16 @@ footer em {
 		}
 
 		.dp {
-			width: 50%;
-			float: left;
 			margin-top: -8em;
-			margin-left: 1em;
+			margin-left: 4em;
 		}
 
 		.intro {
-			text-align: right;
 			padding-right: 6em;
 			padding-top: 1em;
-			z-index: 1;
-		}
-
-		.intro h2 {
-			font-size: 2rem;
 		}
 
 		.nav li {
-			width: 16.5%;
 			text-align: center;
 			padding-bottom: 0;
 		}
@@ -281,26 +256,24 @@ footer em {
 
 		.mystory {
 			padding: 3em 6em 3em 6em;
-			margin: 0;
-		}
-
-		.mystory h2 {
-			text-align: left;
-			margin-top: 0;
 		}
 
 		footer {
-			text-align: left;
 			padding: 2em 6em 3em 6em;
 		}
 
 }
 
-@media only screen and (min-width: 55em) {
+@media only screen and (min-width: 54em) {
 
 		html {
 			font-size: 130%;
 			line-height: 1.6;
+		}
+
+		.dp {
+			width: 50%;
+			margin-top: -8em;
 		}
 
 @media only screen and (min-width: 62em) {
@@ -314,27 +287,13 @@ footer em {
 		}
 
 		.dp {
-			width: 40%;
-			float: left;
 			margin-top: -8em;
-			margin-left: 2em;
+			margin-left: 4em;
 		}
 
 		.intro {
-			text-align: right;
 			padding-right: 10em;
 			padding-top: 1em;
-			z-index: 1;
-		}
-
-		.intro h2 {
-			font-size: 2rem;
-		}
-
-		.nav li {
-			width: 16.5%;
-			text-align: center;
-			padding-bottom: 0;
 		}
 
 		.nav {
@@ -343,23 +302,23 @@ footer em {
 
 		.mystory {
 			padding: 3em 10em 3em 10em;
-			margin: 0;
-		}
-
-		.mystory h2 {
-			text-align: left;
-			margin-top: 0;
 		}
 
 		footer {
-			text-align: left;
 			padding: 2em 10em 3em 10em;
 		}
 
 }
 
-@media only screen and (min-width: 80em) {
+@media only screen and (min-width: 65em) {
+		.dp {
+			width: 40%;
+			margin-top: -8em;
+			margin-right: 6em;
+		}
+}
 
+@media only screen and (min-width: 80em) {
 
 		.masthead {
 			padding: 6em 0 8em 0;
@@ -370,27 +329,12 @@ footer em {
 		}
 
 		.dp {
-			width: 35%;
-			float: left;
 			margin-top: -8em;
 			margin-left: 4em;
 		}
 
 		.intro {
-			text-align: right;
 			padding-right: 15.5em;
-			padding-top: 1em;
-			z-index: 1;
-		}
-
-		.intro h2 {
-			font-size: 2rem;
-		}
-
-		.nav li {
-			width: 16.5%;
-			text-align: center;
-			padding-bottom: 0;
 		}
 
 		.nav {
@@ -399,17 +343,18 @@ footer em {
 
 		.mystory {
 			padding: 3em 15em 3em 15em;
-			margin: 0;
-		}
-
-		.mystory h2 {
-			text-align: left;
-			margin-top: 0;
 		}
 
 		footer {
-			text-align: left;
 			padding: 2em 15em 3em 15em;
 		}
 
 }
+
+@media only screen and (min-width: 84em) {
+
+		.dp {
+			margin-top: -8em;
+			margin-left: 6em;
+			width: 35%;
+		}
